apps/homer/manifests/homer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: homer
    app.kubernetes.io/part-of: homer
    app.kubernetes.io/version: 23.10.1
  name: homer
  namespace: homer
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: homer
      app.kubernetes.io/part-of: homer
  template:
    metadata:
      annotations:
        checksum.config/md5: d41d8cd98f00b204e9800998ecf8427e
      labels:
        app.kubernetes.io/component: server
        app.kubernetes.io/name: homer
        app.kubernetes.io/part-of: homer
        app.kubernetes.io/version: 23.10.1
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - homer
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - image: ghcr.io/bastienwirtz/homer:v26.4.2
          imagePullPolicy: IfNotPresent
          name: homer
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: 10m
              memory: 100Mi
            requests:
              cpu: 2m
              memory: 3Mi
          volumeMounts:
            - mountPath: /www/assets
              name: config
      restartPolicy: Always
      serviceAccountName: homer
      volumes:
        - configMap:
            name: homer-config
          name: config
