apps/homer/manifests/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: homer
    app.kubernetes.io/part-of: homer
    app.kubernetes.io/version: 23.10.1
  name: homer
  namespace: homer
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: homer
    app.kubernetes.io/part-of: homer
