apps/homer/manifests/homer/ingress-cloudflare.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudflare-ingress
  namespace: homer
spec:
  ingressClassName: cloudflare
  rules:
    - host: ankhmorpork.thaum.xyz
      http:
        paths:
          - backend:
              service:
                name: ankhmorpork-homer
                port:
                  number: 80
            path: /
            pathType: Prefix
